--- a/index.html
+++ b/index.html
@@ -1,8 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>XinyiLiu Personal Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      color: #333;
+      background-color: #fff;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #000;
+      color: #fff;
+      padding: 1rem;
+    }
+
+    h1 {
+      margin: 0;
+    }
+
+    main {
+      padding: 2rem;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    h2 {
+      margin-bottom: 0.5rem;
+    }
+
+    p {
+      margin-top: 0.5rem;
+      margin-bottom: 1.5rem;
+      line-height: 1.5;
+    }
+
+    footer {
+      background-color: #000;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    a {
+      color: #333;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<h2>This is Xinyi Liu</h2>
-<p>I'm hosted with GitHub Pages.</p>
+  <header>
+    <h1>Your Name</h1>
+  </header>
+  <main>
+    <h2>About Me</h2>
+    <p>I'm a junior student studying at University of Rochester interested in natural language processing and computational social science. My goal is to contribute to these fields and make a positive impact on society. You can find my projects and research on my GitHub repositories.</p>
+
+
+    <h2>Contact</h2>
+    <p>If you want to get in touch, you can reach me at <a href="xliu118@u.rochester.edu">xliu118@u.rochester.edu</a> or connect with me on <a href="https://www.linkedin.com/in/xliu118/">LinkedIn</a>.</p>
+  </main>
+  <footer>
+    &copy; Xinyi Liu - All Rights Reserved.
+  </footer>
 </body>
 </html>
