--- a/index.html
+++ b/index.html
@@ -1,75 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>XinyiLiu Personal Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      color: #333;
-      background-color: #fff;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #000;
-      color: #fff;
-      padding: 1rem;
-    }
-
-    h1 {
-      margin: 0;
-    }
-
-    main {
-      padding: 2rem;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    h2 {
-      margin-bottom: 0.5rem;
-    }
-
-    p {
-      margin-top: 0.5rem;
-      margin-bottom: 1.5rem;
-      line-height: 1.5;
-    }
-
-    footer {
-      background-color: #000;
-      color: #fff;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    a {
-      color: #333;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Data Science & Psychology</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Xinyi Liu</h1>
-  </header>
-  <main>
-    <h2>About Me</h2>
-    <p>I'm a junior student studying at University of Rochester interested in natural language processing and computational social science. My goal is to contribute to these fields and make a positive impact on society. You can find my projects and research on my GitHub repositories.</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section id="about">
+        <h1>About Me</h1>
+        <p>Hello! I'm Xinyi Liu, a senior undergrad majoring in data science and psychology. I'm passionate about analyzing data to uncover insights and understanding human behavior through technology.</p>
+        <!-- Add more about your background, interests, and any relevant experience -->
+    </section>
 
-    <h2>Contact</h2>
-    <p>If you want to get in touch, you can reach me at <a href="xliu118@u.rochester.edu">xliu118@u.rochester.edu</a> or connect with me on <a href="https://www.linkedin.com/in/xliu118/">LinkedIn</a>.</p>
-  </main>
-  <footer>
-    &copy; Xinyi Liu - All Rights Reserved.
-  </footer>
+    <section id="projects">
+        <h2>Projects</h2>
+        <!-- List of projects -->
+        <!-- Example project -->
+        <div class="project">
+            <h3>Project Name</h3>
+            <p>Short description of your project. What did you do, which technologies were used, and what was the outcome?</p>
+            <!-- Add a link to the project if it's hosted or to the GitHub repository -->
+        </div>
+        <!-- Repeat for other projects -->
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Data Analysis</li>
+            <li>Machine Learning</li>
+            <li>Statistical Modeling</li>
+            <li>Programming (Python, R, etc.)</li>
+            <!-- Add other skills here -->
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>If you'd like to get in touch, feel free to email me at [Your Email] or connect with me on LinkedIn.</p>
+        <!-- Add your contact form or links to your social media -->
+    </section>
+
+    <footer>
+        <p>Copyright © [Your Name] [Year]. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
