font change, background color change

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Data Science & Psychology</title>
+    <title>Xinyi Liu</title>
+    <!-- Import the alternative font from Google Fonts if Futura is not available -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <nav>
             <ul>
@@ -18,40 +21,42 @@
         </nav>
     </header>
 
-    <section id="about">
-        <h1>About Me</h1>
-        <p>Hello! I'm Xinyi Liu, a senior undergrad majoring in data science and psychology. I'm passionate about analyzing data to uncover insights and understanding human behavior through technology.</p>
-        <!-- Add more about your background, interests, and any relevant experience -->
-    </section>
+    <div class="main-content">
+        <section id="about">
+            <h1>About Me</h1>
+            <p>Hello! I'm Xinyi, a senior undergrad majoring in data science and psychology. I'm passionate about analyzing data to uncover insights and understanding human behavior through technology.</p>
+            <!-- Add more about your background, interests, and any relevant experience -->
+        </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <!-- List of projects -->
-        <!-- Example project -->
-        <div class="project">
-            <h3>Project Name</h3>
-            <p>Short description of your project. What did you do, which technologies were used, and what was the outcome?</p>
-            <!-- Add a link to the project if it's hosted or to the GitHub repository -->
-        </div>
-        <!-- Repeat for other projects -->
-    </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <!-- List of projects -->
+            <!-- Example project -->
+            <div class="project">
+                <h3>Project Name</h3>
+                <p>Short description of your project. What did you do, which technologies were used, and what was the outcome?</p>
+                <!-- Add a link to the project if it's hosted or to the GitHub repository -->
+            </div>
+            <!-- Repeat for other projects -->
+        </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Data Analysis</li>
-            <li>Machine Learning</li>
-            <li>Statistical Modeling</li>
-            <li>Programming (Python, R, etc.)</li>
-            <!-- Add other skills here -->
-        </ul>
-    </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Data Analysis</li>
+                <li>Machine Learning</li>
+                <li>Statistical Modeling</li>
+                <li>Programming (Python, R, etc.)</li>
+                <!-- Add other skills here -->
+            </ul>
+        </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>If you'd like to get in touch, feel free to email me at [Your Email] or connect with me on LinkedIn.</p>
-        <!-- Add your contact form or links to your social media -->
-    </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>If you'd like to get in touch, feel free to email me at [Your Email] or connect with me on LinkedIn.</p>
+            <!-- Add your contact form or links to your social media -->
+        </section>
+    </div>
 
     <footer>
         <p>Copyright © [Your Name] [Year]. All rights reserved.</p>
