--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -24,7 +25,7 @@
     <div class="main-content">
         <section id="about">
             <h1>About Me</h1>
-            <p>Hello! I'm Xinyi, a senior undergrad majoring in data science and psychology. I'm passionate about analyzing data to uncover insights and understanding human behavior through technology.</p>
+            <p>Hello! I'm Xinyi, a senior undergrad majoring in data science and psychology. I'm passionate about AI, especially how we may get intuition from human brain.</p>
             <!-- Add more about your background, interests, and any relevant experience -->
         </section>
 
@@ -43,12 +44,23 @@
         <section id="skills">
             <h2>Skills</h2>
             <ul>
-                <li>Data Analysis</li>
                 <li>Machine Learning</li>
-                <li>Statistical Modeling</li>
+                <li>Computational Linguistics</li>
                 <li>Programming (Python, R, etc.)</li>
                 <!-- Add other skills here -->
             </ul>
+        </section>
+
+        <section id="blog">
+          <h2>Blog</h2>
+          <article id="latest-post">
+              <h3>Latest Post Title</h3>
+              <p>Date: [Date of Post]</p>
+              <p>Here's a brief overview of my latest post. You can read more about it by clicking on the link below.</p>
+              <!-- Link to full blog post -->
+              <a href="link-to-full-post.html">Read more...</a>
+          </article>
+          <!-- You can add more blog post previews here -->
         </section>
 
         <section id="contact">
