--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <p>Date: [Date of Post]</p>
               <p>Here's a brief overview of my latest post. You can read more about it by clicking on the link below.</p>
               <!-- Link to full blog post -->
-              <a href="link-to-full-post.html">Read more...</a>
+              <a href="blog.html">Read more...</a>
           </article>
           <!-- You can add more blog post previews here -->
         </section>
