--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Data Science & Psychology Portfolio</title>
+    <title> *Xinyi Liu* </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Undergraduate Student in Data Science & Psychology</p>
+        <h1>Hi my name is Xinyi Liu</h1>
     </header>
     <nav>
         <ul>
@@ -20,10 +19,10 @@
     </nav>
     <section id="about">
         <h2>About Me</h2>
-        <p>Short description about yourself, your interests, and your academic/professional goals.</p>
+        <p>I'm currently an undergraduate student in University of Rochester majoring in data science and psychology. I'm interested in natural language processing and human-computer interaction, especially their applications in social science.</p>
     </section>
     <footer>
-        <p>Contact me: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>Contact me: <a href="mailto:xinyi.liu@rochester.edu">xinyi.liu@rochester.edu</a></p>
     </footer>
 </body>
 </html>
