--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> *Xinyi Liu* </title>
+    <title>Xinyi Liu</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Hi my name is Xinyi Liu</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="cv.pdf" target="_blank">CV</a></li>
-            <li><a href="resume.pdf" target="_blank">Resume</a></li>
-            <li><a href="https://github.com/yourusername" target="_blank">GitHub Projects</a></li>
-        </ul>
-    </nav>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I'm currently an undergraduate student in University of Rochester majoring in data science and psychology. I'm interested in natural language processing and human-computer interaction, especially their applications in social science.</p>
-    </section>
-    <footer>
-        <p>Contact me: <a href="mailto:xinyi.liu@rochester.edu">xinyi.liu@rochester.edu</a></p>
-    </footer>
+    <div class="container">
+        <header>
+            <img src="profile.jpeg" alt="Xinyi Liu" class="profile-pic">
+            <h1>Hi, my name is Xinyi Liu</h1>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="cv.pdf" target="_blank">CV</a></li>
+                <li><a href="resume.pdf" target="_blank">Resume</a></li>
+                <li><a href="https://github.com/xinyiliu28" target="_blank">GitHub Projects</a></li>
+            </ul>
+        </nav>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I'm currently an undergraduate student at the University of Rochester majoring in data science and psychology. I'm interested in natural language processing and human-computer interaction, especially their applications in social science.</p>
+        </section>
+        <footer>
+            <p>Contact me: <a href="mailto:xinyi.liu@rochester.edu">xinyi.liu@rochester.edu</a></p>
+        </footer>
+    </div>
 </body>
 </html>
