--- a/index.html
+++ b/index.html
@@ -8,23 +8,29 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <img src="profile.jpeg" alt="Xinyi Liu" class="profile-pic">
-            <h1>Hi, my name is Xinyi Liu</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="cv.pdf" target="_blank">CV</a></li>
-                <li><a href="resume.pdf" target="_blank">Resume</a></li>
-                <li><a href="https://github.com/xinyiliu28" target="_blank">GitHub Projects</a></li>
-            </ul>
-        </nav>
+        <div class="profile-header">
+            <img src="profile_photo.jpeg" alt="Xinyi Liu" class="profile-pic">
+            <div>
+                <header>
+                    <h1>Hi, my name is Xinyi Liu</h1>
+                </header>
+                <nav>
+                    <ul>
+                        <li><a href="cv.pdf" target="_blank">CV</a></li>
+                        <li><a href="resume.pdf" target="_blank">Resume</a></li>
+                        <li><a href="https://github.com/xinyiliu28" target="_blank">GitHub Projects</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
         <section id="about">
             <h2>About Me</h2>
-            <p>I'm currently an undergraduate student at the University of Rochester majoring in data science and psychology. I'm interested in natural language processing and human-computer interaction, especially their applications in social science.</p>
+            <p>I'm currently a graduate student at the University of Washington, pursuing a master's degree in Computational Linguistics. 
+                I hold dual bachelor's degrees from the University of Rochester, one in Psychology (BA) and another in Data Science (BS). 
+                I am passionate about leveraging my research to contribute towards creating a more equitable world. </p>
         </section>
         <footer>
-            <p>Contact me: <a href="mailto:xinyi.liu@rochester.edu">xinyi.liu@rochester.edu</a></p>
+            <p>Contact me: xinyi dot liu at rochester dot edu | xliu118 at uw dot edu</a></p>
         </footer>
     </div>
 </body>
